--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "graphql": "^16.8.1",
-    "mongoose": "^8.0.4"
+    "mongoose": "^8.0.4",
+    "mysql2": "^3.10.0",
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   }
 }
